Start to fix compiler deprecations